# instagram-scraper

./: pyproject.toml  requirements.txt
igramscraper/: endpoints.py  instagram.py
igramscraper/model/: account.py
