[tool.poetry]
name = "igramscraper"
version = "0.1.0"
description = ""
authors = ["Alvin So <r.alvso@icloud.com>"]

[tool.poetry.dependencies]
python = "^3.9"
appdirs = "^1.4.4"
beautifulsoup4 = "^4.10.0"
bs4 = "^0.0.1"
certifi = "^2021.10.8"
chardet = "^4.0.0"
cssselect = "^1.1.0"
fake-useragent = "^0.1.11"
idna = "^3.3"
lxml = "^4.7.1"
parse = "^1.19.0"
pyquery = "^1.4.3"
python-slugify = "^5.0.2"
requests = "^2.27.1"
requests-html = "^0.10.0"
six = "^1.16.0"
soupsieve = "^2.3.1"
text-unidecode = "^1.3"
tqdm = "^4.62.3"
urllib3 = "^1.26.8"
w3lib = "^1.22.0"
websockets = "^10.1"
pyppeteer = "^1.0.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
